--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <a href="https://doc.arashtad.com/docs/frameworks/sci-fi-games-ui/">Documentation</a> ✦
                 <a href="https://arashtad.com/licensing/">Licensing</a> ✦
                 <a href="https://market.arashtad.com/frameworks/sci-fi-games-ui">Download</a> ✦
-                <a href="#">GitHub</a> ✦
+                <a href="https://github.com/arashtad/Sci-Fi-Games-UI-Elements-Pack">GitHub</a> ✦
                 <a href="https://arashtad.com/arashtad-social-media-profiles/">Follow us</a>
             </p>
             <div class="ar-grid">
