Updating the name

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <a href="https://arashtad.com">Arashtad.com</a>
             </h2>
             <p class="center">
-                <a href="https://demo.arashtad.com/?category=Frontend_Development&&item=Sci-Fi_Games_UI">Demo</a> ✦
+                <a href="https://demo.arashtad.com/?category=Frontend_Development&&item=Sci-Fi_Game_UI">Demo</a> ✦
                 <a href="https://doc.arashtad.com/docs/frameworks/sci-fi-games-ui/">Documentation</a> ✦
                 <a href="https://arashtad.com/licensing/">Licensing</a> ✦
                 <a href="https://market.arashtad.com/frameworks/sci-fi-games-ui">Download</a> ✦
