Updating the index

--- a/index.html
+++ b/index.html
@@ -55,67 +55,67 @@
                             <ul class="ar-list">
                                 <li><h3 class="warning">In-Game Objects</h3></li>
                                 <li>
-                                    <a href="templates/boxes.html" target="_blank">
+                                    <a href="templates/boxes.html">
                                         <span class="fa fa-external-link"></span> Boxes
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="templates/lists.html" target="_blank">
+                                    <a href="templates/lists.html">
                                         <span class="fa fa-external-link"></span> Lists
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="templates/cards.html" target="_blank">
+                                    <a href="templates/cards.html">
                                         <span class="fa fa-external-link"></span> Cards
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="templates/buttons.html" target="_blank">
+                                    <a href="templates/buttons.html">
                                         <span class="fa fa-external-link"></span> Buttons
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="templates/arrows.html" target="_blank">
+                                    <a href="templates/arrows.html">
                                         <span class="fa fa-external-link"></span> Arrows
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="templates/alerts.html" target="_blank">
+                                    <a href="templates/alerts.html">
                                         <span class="fa fa-external-link"></span> Alerts
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="templates/grid.html" target="_blank">
+                                    <a href="templates/grid.html">
                                         <span class="fa fa-external-link"></span> Grid System
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="templates/tables.html" target="_blank">
+                                    <a href="templates/tables.html">
                                         <span class="fa fa-external-link"></span> Tables
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="templates/labels.html" target="_blank">
+                                    <a href="templates/labels.html">
                                         <span class="fa fa-external-link"></span> Labels
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="templates/pagination.html" target="_blank">
+                                    <a href="templates/pagination.html">
                                         <span class="fa fa-external-link"></span> Pagination
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="templates/pre-loader.html" target="_blank">
+                                    <a href="templates/pre-loader.html">
                                         <span class="fa fa-external-link"></span> Pre-loader
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="templates/slider.html" target="_blank">
+                                    <a href="templates/slider.html">
                                         <span class="fa fa-external-link"></span> Slider
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="templates/tabs.html" target="_blank">
+                                    <a href="templates/tabs.html">
                                         <span class="fa fa-external-link"></span> Tabs
                                     </a>
                                 </li>
@@ -127,7 +127,7 @@
                             <ul class="ar-list">
                                 <li><h3 class="warning">Assets</h3></li>
                                 <li>
-                                    <a href="templates/assets.html" target="_blank">
+                                    <a href="templates/assets.html">
                                         <span class="fa fa-external-link"></span>  CSS Classes
                                     </a>
                                 </li>
@@ -137,52 +137,52 @@
                             <ul class="ar-list">
                                 <li><h3 class="warning">User Forms</h3></li>
                                 <li>
-                                    <a href="templates/register.html" target="_blank">
+                                    <a href="templates/register.html">
                                         <span class="fa fa-external-link"></span>  Sign up Form
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="templates/login.html" target="_blank">
+                                    <a href="templates/login.html">
                                         <span class="fa fa-external-link"></span> Login Form
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="templates/verify-user.html" target="_blank">
+                                    <a href="templates/verify-user.html">
                                         <span class="fa fa-external-link"></span> User Verification
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="templates/forgot-password.html" target="_blank">
+                                    <a href="templates/forgot-password.html">
                                         <span class="fa fa-external-link"></span> Forgot Password
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="templates/reset-password.html" target="_blank">
+                                    <a href="templates/reset-password.html">
                                         <span class="fa fa-external-link"></span> Reset Password
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="templates/update-profile.html" target="_blank">
+                                    <a href="templates/update-profile.html">
                                         <span class="fa fa-external-link"></span> Update Profile
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="templates/help.html" target="_blank">
+                                    <a href="templates/help.html">
                                         <span class="fa fa-external-link"></span> Help/Blog Output
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="templates/post.html" target="_blank">
+                                    <a href="templates/post.html">
                                         <span class="fa fa-external-link"></span> Single Post
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="templates/result.html" target="_blank">
+                                    <a href="templates/result.html">
                                         <span class="fa fa-external-link"></span> Round Result
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="templates/scores.html" target="_blank">
+                                    <a href="templates/scores.html">
                                         <span class="fa fa-external-link"></span> User's Scores
                                     </a>
                                 </li>
@@ -194,42 +194,42 @@
                             <ul class="ar-list">
                                 <li><h3 class="warning">Admin Panel</h3></li>
                                 <li>
-                                    <a href="templates/list-users.html" target="_blank">
+                                    <a href="templates/list-users.html">
                                         <span class="fa fa-external-link"></span> List Users
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="templates/manage-models.html" target="_blank">
+                                    <a href="templates/manage-models.html">
                                         <span class="fa fa-external-link"></span> Manage Models
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="templates/top-players.html" target="_blank">
+                                    <a href="templates/top-players.html">
                                         <span class="fa fa-external-link"></span> Top Players
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="templates/help-pages.html" target="_blank">
+                                    <a href="templates/help-pages.html">
                                         <span class="fa fa-external-link"></span> Help Pages
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="templates/edit-help.html" target="_blank">
+                                    <a href="templates/edit-help.html">
                                         <span class="fa fa-external-link"></span> Edit Help Page
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="templates/manage-players.html" target="_blank">
+                                    <a href="templates/manage-players.html">
                                         <span class="fa fa-external-link"></span> Manage Players
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="templates/update-user.html" target="_blank">
+                                    <a href="templates/update-user.html">
                                         <span class="fa fa-external-link"></span> Edit User Info
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="templates/edit-user-password.html" target="_blank">
+                                    <a href="templates/edit-user-password.html">
                                         <span class="fa fa-external-link"></span> Edit User's Password
                                     </a>
                                 </li>
