--- a/index.html
+++ b/index.html
@@ -119,6 +119,11 @@
                                         <span class="fa fa-external-link"></span> Tabs
                                     </a>
                                 </li>
+                                <li>
+                                    <a href="templates/modal.html">
+                                        <span class="fa fa-external-link"></span> Modal
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </div>
