Adding new preloader.

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="keywords" content="scifi, ui pack, ui framework, sci-fi framework, sci-fi elements pack">
-    <meta name="description" content="Arashtad Sci-Fi UI Elements Pack is a free and open source product suitable for Sci-Fi type web pages, games, etc.">
-    <title>Sci-Fi Game UI</title>
+    <meta name="description" content="This is a free and open source Sci-Fi UI Elements Pack, suitable for Sci-Fi web pages, games, etc.">
+    <title>Arashtad Sci-fi UI Elements Pack</title>
     <link rel="stylesheet" href="css/master.min.css">
     <link rel="stylesheet" href="css/overlay-scrollbars.min.css">
     <link rel="stylesheet" href="fonts/fontawesome-4.7.0/css/font-awesome.min.css">
@@ -31,11 +31,11 @@
     <main>
         <div class="ar-container">
             <h1 class="center">
-                Sci-Fi Game UI
+                Sci-fi UI Elements
             </h1>
-            <p class="center warning">
+            <h2 class="center warning">
                 A UI elements pack for Sci-Fi games by
-            </p>
+            </h2>
             <h2 class="center">
                 <a href="https://arashtad.com">Arashtad.com</a>
             </h2>
