Adding new preloader.

--- a/index.html
+++ b/index.html
@@ -110,6 +110,11 @@
                                     </a>
                                 </li>
                                 <li>
+                                    <a href="templates/pre-loader-v2.html">
+                                        <span class="fa fa-external-link"></span> Pre-loader + Logo
+                                    </a>
+                                </li>
+                                <li>
                                     <a href="templates/slider.html">
                                         <span class="fa fa-external-link"></span> Slider
                                     </a>
