Adding a to-do list style.

--- a/index.html
+++ b/index.html
@@ -196,6 +196,11 @@
                                         <span class="fa fa-external-link"></span> User's Scores
                                     </a>
                                 </li>
+                                <li>
+                                    <a href="templates/to-do-list.html">
+                                        <span class="fa fa-external-link"></span> To-do List
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </div>
